# studentsDataBase

./: CMakeLists.txt  Makefile  README.md  main.cpp  settinds.json  student.cpp  student.h  student_functions.cpp  test.cpp
.github/workflows/: c-cpp.yml
